maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:8: error: not found: value sommaAngle
	sommeAngle = sommaAngle +1
                     ^Escaper:22: error: not found: value SommeAngle
			sommeAngle = SommeAngle +1
                                     ^